--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <script src="https://cdn.jsdelivr.net/npm/p5@1.4.1/lib/p5.js"></script>
-
-    <script src="sketch.js"></script>
+    <script defer src="perlinNoise.js"></script>
     <link rel="stylesheet" href="styles.css" />
 
     <title>PerlinNoiseV01</title>
